css/editr.css
@import url("./common.css"); 

#editrCanvas {
  width: 100%;
  height: 100%;
  image-rendering: pixelated;
}

#tileSelectBar {
  position:absolute;
  bottom: 0px;
  left: 0px;
  width: 100%;
  padding-top: 0.7vh;
  padding-left: 1vh;
  padding-right: 1vh;
  padding-bottom: 1vh;
  background-color: rgba(73, 73, 73, 0.514);
  z-index: 999;
  backdrop-filter: blur(20px);
  border-top: 0.4vh solid rgb(54, 54, 54);
}

.unselected {
  opacity: 0.5;
}


.tileOption {
  display: inline-block;
  height: 6vh;
  width: 6vh;
  image-rendering: pixelated;
}

.tileOption.unselected:hover {
  opacity: 1;
}

.tileOption:not(.unselected) {
  /* Add a nice little border to the tile */
  border: 0.2vh solid rgb(192, 192, 192);
}

#tooltip {
  position: absolute;
  bottom: 9%;
  left: 1vh;
  color: white;
}

.side-menu {
  height: 92% !important;
}

#player_color{
  border-radius: 100%;
  height: 20px;
  width: 20px;
  border: none;
  outline: none;
  -webkit-appearance: none;
}

#player_color::-webkit-color-swatch-wrapper {
  padding: 0; 
}
#player_color::-webkit-color-swatch {
  border: none;
  border-radius: 50%;
}

